objects/advitya__TempIDStorage__c.object
<CustomObject>
    <fields>
        <fullName>advitya__ListOfIds__c</fullName>
        <label>ListOfIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advitya__QueryName__c</fullName>
        <label>QueryName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__TotalCount__c</fullName>
        <label>TotalCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advitya__UserName__c</fullName>
        <label>UserName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>TempIDStorage</label>
    <nameField>
        <label>TempIDStorage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TempIDStorage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>